서버 에러 관련 가능성 있는 에러 원인 수정